<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ui.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one"/>
        <Button
            android:id="@+id/sabtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_adapter" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/two"/>
        <Button
            android:id="@+id/dgbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Alertdialog" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/three"/>
        <Button
            android:id="@+id/xmlbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/XmlMenu" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/four"/>
        <Button
            android:id="@+id/ambtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ActionMode" />
    </LinearLayout>
</LinearLayout>